--- a/Smartbook.html
+++ b/Smartbook.html
@@ -5,7 +5,7 @@
   <title>Smartbook - AudioBook</title>
 
   <!-- ✅ PWA : ajout du manifest -->
-  <link rel="manifest" href="https://ericcarmes.github.io/Encyclo-AI-030/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="logo-icon-192.png">
 
   <style>
@@ -73,7 +73,7 @@
 <body>
 
   <div class="header">
-    <img src="Couverture_resized.jpg" alt="Couverture Vermeer" class="cover">
+    <img src="Couverture_resized.jpg" alt="Couverture AudioBook" class="cover">
   </div>
 
   <div class="logos">
